Fix: Text wrapping issue in ie 9/10

--- a/app/assets/stylesheets/ie.scss
+++ b/app/assets/stylesheets/ie.scss
@@ -6,4 +6,8 @@
   @media (min-width: $break-large) {
     margin-left: $sidebar-width;
   }
+
+  .card-front .right ul li {
+    display: inline-block;
+  }
 }
